# evidence-normalization

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: checks.yaml  release.yaml
evidence/: __init__.py  main.py  schemas.py  version.py
evidence/data_sources/: __init__.py  base.py  cancer_hotspots.py  cbioportal.py  gnomad.py
evidence/dev/: README.md  cli.py
evidence/dev/etl/: __init__.py  cancer_hotspots.py  cbioportal.py
src/evidence/: __init__.py
src/evidence/data_sources/: cancer_hotspots.py  cbioportal.py
src/evidence/dev/: __init__.py  cli.py
src/evidence/dev/etl/: cancer_hotspots.py  cbioportal.py
tests/: __init__.py  conftest.py
tests/data_sources/: test_cancer_hotspots.py  test_cbioportal.py  test_gnomad.py
