[project]
name = "evidence-normalizer"
authors = [
    {name = "Alex Wagner"},
    {name = "Kori Kuzma"},
    {name = "James Stevenson"}
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
description = "VICC normalization routines for evidence"
license = {file = "LICENSE"}
dependencies = [
    "pydantic==2.*",
    "requests",
    "boto3"
]
dynamic = ["version"]

[project.optional-dependencies]
etl = [
    "variation-normalizer~= 0.8.0.dev0",
    "asyncclick",
    "openpyxl",
    "pandas",
    "xlrd"
]
dev = [
    "pre-commit>=3.7.1",
    "flake8",
    "flake-docstrings",
    "flake8-quotes",
    "flake8-annotations",
    "flake8-import-order"
]
tests = [
    "pytest",
    "pytest-cov"
]

[project.urls]
Homepage = "https://github.com/cancervariants/evidence-normalization"
Changelog = "https://github.com/cancervariants/evidence-normalization/releases"
Source = "https://github.com/cancervariants/evidence-normalization"
"Bug Tracker" = "https://github.com/cancervariants/evidence-normalization/issues"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = "--cov=evidence --cov-report term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
